# zoneout

./: .envrc  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  NAME  PROJECT  README.md  REFACTORING_SUMMARY.md  TODO.md  debug_farm  debug_farm.cpp  debug_sampling.cpp  devbox.json  geotiff_issues.md  package-lock.json  present.md  test_boundary.json  test_boundary.tif  test_enhanced.cpp  test_load_debug.cpp  xmake.lua
complex_builder_plot/zone_0/: raster.tiff  vector.geojson
complex_builder_plot/zone_1/: raster.tiff  vector.geojson
complex_builder_plot/zone_2/: raster.tiff  vector.geojson
examples/: GENISOXML.md  GENPROP.md  agricultural_visualization_example.cpp  builder_pattern_example.cpp  debug_file_io.cpp  enhanced_zone_example.cpp  farm_example.cpp  farm_spatial_index_example.cpp  grid_center_example.cpp  layer_example.cpp  main.cpp  overlapping_zones_plot.cpp  plot.cpp  quickstart.cpp  saver.cpp  simple_modern_zone.cpp  simple_test.cpp  spaces_example.cpp  test_boundary_fix.cpp
include/microtar/: microtar.hpp
include/zoneout/: visualize.hpp  zoneout.hpp
include/zoneout/entropy/: generator.hpp
include/zoneout/zoneout/: constants.hpp  farm.hpp  grid.hpp  io.hpp  layer.hpp  plot.hpp  plot_builder.hpp  poly.hpp  polygrid.hpp  uuid_utils.hpp  zone.hpp  zone_builder.hpp  zone_io.hpp
include/zoneout/zoneout/utils/: meta.hpp  time.hpp  uuid.hpp
src/: grid.cpp  layer.cpp  polygrid.cpp  zone.cpp
src/zoneout/: grid.cpp  io.cpp  layer.cpp  plot.cpp  plot_builder.cpp  poly.cpp  polygrid.cpp  zone.cpp  zone_builder.cpp  zoneout.cpp
src/zoneout/entropy/: generator.cpp
test/: test_builders.cpp  test_coordinate_system.cpp  test_farm.cpp  test_file_io_roundtrip.cpp  test_file_io_roundtrip.cpp.disabled  test_integration.cpp  test_irregular_polygon.cpp  test_layer.cpp  test_microtar.cpp  test_polygrid.cpp  test_raster.cpp  test_real_field.cpp  test_resolution.cpp  test_spatial_operations.cpp  test_time_utils.cpp  test_uuid_utils.cpp  test_vector.cpp  test_zone.cpp  test_zone_advanced.cpp  test_zone_io.cpp  test_zone_save.cpp
